@@ -1279,8 +1279,7 @@ This is a specialization of `soap-encode-value' for
        (dolist (type type-list)
          (dolist (element (soap-xs-complex-type-elements type))
            (catch 'done
-             (let ((instance-count 0)
-                   (e-name (soap-xs-element-name element)))
+             (let ((instance-count 0))
                (dolist (candidate (soap-get-candidate-elements element))
                  (let ((e-name (soap-xs-element-name candidate)))
                    (if e-name
@@ -1305,7 +1304,8 @@ This is a specialization of `soap-encode-value' for
                              (incf instance-count))))))))
                ;; Do some sanity checking
                (let ((indicator (soap-xs-complex-type-indicator type))
-                     (element-type (soap-xs-element-type element)))
+                     (element-type (soap-xs-element-type element))
+                     (e-name (soap-xs-element-name element)))
                  (cond ((and (eq indicator 'choice)
                              (> instance-count 0))
                         ;; This was a choice node and we encoded one instance
@@ -1318,7 +1318,7 @@ This is a specialization of `soap-encode-value' for
                                         element-type))))
                         (soap-warning
                          "While encoding %s: missing non-nillable slot %s"
-                         value element))
+                         value (or e-name element)))
                        ((and (> instance-count 1)
                              (not (soap-xs-element-multiple? element))
                              (and (soap-xs-complex-type-p element-type)
@@ -1327,7 +1327,7 @@ This is a specialization of `soap-encode-value' for
                         (soap-warning
                          (concat  "While encoding %s: expected single,"
                                   " found multiple slots for element: %s")
-                         value element))))))))))
+                         value (or e-name element)))))))))))
     (t
      (error "Don't know how to encode complex type: %s"
             (soap-xs-complex-type-indicator type)))))
